--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
@@ -63,7 +64,8 @@
       "cordova-plugin-file": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
